--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,3 +5,13 @@ services:
             file: postgresql.yml
             service: postgresql
         container_name: xtarefas-postgresql
+    minio-xtarefas:
+        extends:
+            file: minio.yml
+            service: documentos-minio
+        container_name: minio
+    elastic-xtarefas:
+        extends:
+            service: elasticsearch
+            file: elasticsearch.yml
+        container_name: elasticsearch-xtarefas
